Fixed scrollbar disappearing at frontpage

--- a/hciu1/static/screen.css
+++ b/hciu1/static/screen.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 body, div {
     margin: 0;
     padding: 0;
